--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7"
+    "eslint-config-next": "15.1.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0"
   }
 }
